--- a/home.html
+++ b/home.html
@@ -3,23 +3,34 @@
   <head>
     <title>The Nico Times</title>
     <style>
-      a {
-        color: wheat;
-        background-color: tomato;
-        text-decoration: none;
-        padding: 3px 5px;
-        border-radius: 5px;
-        font-size: 55px;
-        transition: all 1s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+      body {
+        display: flex;
+        height: 100vh;
+        align-items: center;
+        justify-content: center;
       }
-      a:hover {
-        border-radius: 20px;
-        color: tomato;
-        background-color: wheat;
+      div {
+        background-color: teal;
+        width: 200px;
+        height: 200px;
+      }
+      @media screen and (max-width: 601px) and (max-width: 1200px) and (orientation: landscape) {
+        div {
+          background-color: wheat;
+        }
+      }
+      span {
+        font-size: 36px;
+      }
+      @media screen and (orientation: landscape) {
+        span {
+          display: none;
+        }
       }
     </style>
   </head>
   <body>
-    <a href="">Go Home</a>
+    <div></div>
+    <span> Please file your phone </span>
   </body>
 </html>
