--- a/chats.html
+++ b/chats.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends - Kokoa Clone</title>
+    <title>Charts - Kokoa Clone</title>
 </head>
 
 <body>
@@ -28,66 +28,41 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">Chats</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
+            <span><i class="far fa-comment-dots fa-lg"></i></span>
             <span><i class="fas fa-cog fa-lg"></i></span>
         </div>
     </header>
 
-    <a id="friends-display-link">
-        <i class="fas fa-info-circle"></i>
-        Friends Names Display
-        <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-    <main class="friends-screen">
+    <main class="main-screen">
         <!-- photo and test -->
         <div class="user-component">
             <div class="user-component__column">
                 <img src="https://avatars3.githubusercontent.com/u/3612017"
-                    class="user-component__avatar user-component_avatar--xl" />
+                    class="user-component__avatar user-component_avatar" />
                 <div class="user-component__text">
                     <h4 class="user-component__title">Nicolas</h4>
-                    <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+                    <h6 class="user-component__subtitle">Please check My Kakao Account Info</h6>
                 </div>
             </div>
             <div class="user-component__column"></div>
         </div>
-        <div class="friends_screen_channel">
-            <div class="friends-screen__channel-header">
-                <span>Channel</span>
-                <i class="fas fa-chevron-up fa-xs"></i>
-            </div>
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="https://avatars3.githubusercontent.com/u/3612017"
-                        class="user-component__avatar user-component_avatar--sm" />
-                    <div class="user-component__text">
-                        <h4 class="user-component__title">Channel</h4>
-                        <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
-                    </div>
-                </div>
-                <div class="user-component__column">
-                    <span>2</span>
-                    <i class="fas fa-chevron-right fa-xs"></i>
-                </div>
-            </div>
-        </div>
-
     </main>
 
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
                 <a class="nav__link" href="friends.html">
-                    <i class="fas fa-user fa-2x"></i>
+                    <i class="far fa-user fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav__notification">1</span>
-                    <i class="far fa-comment fa-2x"></i>
+                    <i class="fas fa-comment fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
