--- a/chats.html
+++ b/chats.html
@@ -42,13 +42,16 @@
         <div class="user-component">
             <div class="user-component__column">
                 <img src="https://avatars3.githubusercontent.com/u/3612017"
-                    class="user-component__avatar user-component_avatar" />
+                    class="user-component__avatar user-component__avatar--xl" />
                 <div class="user-component__text">
                     <h4 class="user-component__title">Nicolas</h4>
                     <h6 class="user-component__subtitle">Please check My Kakao Account Info</h6>
                 </div>
             </div>
-            <div class="user-component__column"></div>
+            <div class="user-component__column">
+                <span class="user-component__time">21:22</span>
+                <div class="badge">1</div>
+            </div>
         </div>
     </main>
 
@@ -61,7 +64,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
-                    <span class="nav__notification">1</span>
+                    <span class="nav__notification badge">1</span>
                     <i class="fas fa-comment fa-2x"></i>
                 </a>
             </li>
