--- a/friends.html
+++ b/friends.html
@@ -46,7 +46,7 @@
         <div class="user-component">
             <div class="user-component__column">
                 <img src="https://avatars3.githubusercontent.com/u/3612017"
-                    class="user-component__avatar user-component_avatar--xl" />
+                    class="user-component__avatar user-component__avatar--xl" />
                 <div class="user-component__text">
                     <h4 class="user-component__title">Nicolas</h4>
                     <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
@@ -54,7 +54,7 @@
             </div>
             <div class="user-component__column"></div>
         </div>
-        <div class="friends_screen_channel">
+        <div class="friends-screen__channel">
             <div class="friends-screen__channel-header">
                 <span>Channel</span>
                 <i class="fas fa-chevron-up fa-xs"></i>
@@ -62,15 +62,17 @@
             <div class="user-component">
                 <div class="user-component__column">
                     <img src="https://avatars3.githubusercontent.com/u/3612017"
-                        class="user-component__avatar user-component_avatar--sm" />
+                        class="user-component__avatar user-component__avatar--sm" />
                     <div class="user-component__text">
-                        <h4 class="user-component__title">Channel</h4>
+                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
                         <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
                     </div>
                 </div>
                 <div class="user-component__column">
-                    <span>2</span>
-                    <i class="fas fa-chevron-right fa-xs"></i>
+                    <div>
+                        <span>2</span>
+                        <i class="fas fa-chevron-right fa-xs"></i>
+                    </div>
                 </div>
             </div>
         </div>
@@ -86,7 +88,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
-                    <span class="nav__notification">1</span>
+                    <span class="nav__notification badge">1</span>
                     <i class="far fa-comment fa-2x"></i>
                 </a>
             </li>
