--- a/find.html
+++ b/find.html
@@ -78,8 +78,12 @@
                     </div>
                 </div>
                 <div class="open-post__column">
-                    <!-- <h5>#Bts Gang~</h5>
-                    <h6></h6> -->
+                    <div class="open-post__photo">
+                        <img src="https://avatars3.githubusercontent.com/u/3612017" />
+                        <div class="open-post__heart-count">
+                            <i class="fas fa-heart fa-xs"></i><span>346</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
