--- a/settings.html
+++ b/settings.html
@@ -43,12 +43,14 @@
                     <i class="fas fa-bullhorn"></i>
                     <span>Notices</span>
                 </div>
+                <div class="settings__setting-column"></div>
             </li>
             <li class="settings__setting">
                 <div class="settings__setting-column">
                     <i class="fas fa-flask"></i>
                     <span>Kokoa Lab</span>
                 </div>
+                <div class="settings__setting-column"></div>
             </li>
             <li class="settings__setting">
                 <div class="settings__setting-column">
