--- a/chats.html
+++ b/chats.html
@@ -38,7 +38,7 @@
   </header>
 
   <main class="main-screen">
-    <!-- photo and test -->
+    <a href="chat.html">
     <div class="user-component">
       <div class="user-component__column">
         <img src="https://avatars3.githubusercontent.com/u/3612017"
@@ -53,6 +53,7 @@
         <div class="badge">1</div>
       </div>
     </div>
+    </a>
   </main>
 
   <nav class="nav">
