--- a/chat.html
+++ b/chat.html
@@ -63,6 +63,18 @@
         </div>
     </main>
 
+    <form action="#" class="reply">
+        <div class="reply__column">
+            <i class="far fa-plus-square fa-lg"></i>
+        </div>
+        <div class="reply__column">
+            <input type="text" placeholder="write a message..." />
+            <i class="far fa-smile-beam fa-lg"></i>
+            <button>
+                <i class="fas fa-arrow-up"></i>
+            </button>
+        </div>
+    </form>
     <script src="https://kit.fontawesome.com/13aadabdda.js" crossorigin="anonymous"></script>
 </body>
 
