--- a/chat.html
+++ b/chat.html
@@ -45,13 +45,13 @@
         </div>
         <div class="message-row">
             <img src="https://avatars3.githubusercontent.com/u/3612017"">
-            <div class="message-row__content">
-                <span class="message_author">Nicolas</span>
-                <div class="message__info">
-                    <span class="message__bubble">Hi!</span>
-                    <span class="message__time">21:27</span>
-                </div>
+            <div class=" message-row__content">
+            <span class="message_author">Nicolas</span>
+            <div class="message__info">
+                <span class="message__bubble">Hi!</span>
+                <span class="message__time">21:27</span>
             </div>
+        </div>
         </div>
         <div class="message-row message-row--own">
             <div class="message-row__content">
@@ -75,6 +75,11 @@
             </button>
         </div>
     </form>
+
+    <div id="no-mobile">
+        <span>Your screen is too bigㅜㅜ</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/13aadabdda.js" crossorigin="anonymous"></script>
 </body>
 
