--- a/chats.html
+++ b/chats.html
@@ -83,6 +83,10 @@
         </ul>
     </nav>
 
+    <div id="no-mobile">
+        <span>Your screen is too bigㅜㅜ</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/13aadabdda.js" crossorigin="anonymous"></script>
 </body>
 
