--- a/friends.html
+++ b/friends.html
@@ -109,6 +109,10 @@
     <i class="fas fa-comment"></i>
   </div>
 
+  <div id="no-mobile">
+    <span>Your screen is too bigㅜㅜ</span>
+  </div>
+
   <script src="https://kit.fontawesome.com/13aadabdda.js" crossorigin="anonymous"></script>
 </body>
 
