--- a/settings.html
+++ b/settings.html
@@ -91,6 +91,10 @@
         </ul>
     </nav>
 
+    <div id="no-mobile">
+        <span>Your screen is too bigㅜㅜ</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/13aadabdda.js" crossorigin="anonymous"></script>
 </body>
 
