--- a/friends.html
+++ b/friends.html
@@ -110,7 +110,7 @@
   </div>
 
   <div id="no-mobile">
-    <span>Your screen is Super bigㅜㅜ</span>
+    <span>Your screen is TOO bigㅜㅜ😱</span>
   </div>
 
   <script src="https://kit.fontawesome.com/13aadabdda.js" crossorigin="anonymous"></script>
